fix: portfolio-item spacing

--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -67,8 +67,6 @@
     position: relative;
     display: block;
     background-position: center center;
-    box-shadow: 4px 2px 6px 4px rgba(113, 113, 113, 0.2);
-    border-radius: 8px;
 }
 
 .portfolio-item-link:focus-visible {
@@ -78,6 +76,7 @@
 
 .modal-trigger,
 .portfolio-item-link {
+    display: block;
     border: none;
     border-radius: 8px;
     cursor: pointer;
@@ -86,6 +85,7 @@
     padding-inline: 0;
     width: 100%;
     height: 100%;
+    box-shadow: 4px 2px 6px 4px rgba(113, 113, 113, 0.2);
 
     picture {
         display: flex;
